--- a/posts/随便说点啥.md
+++ b/posts/随便说点啥.md
@@ -6,18 +6,55 @@ tags:
   - 闲聊
 ---
 
-# 闲聊
+## 生活
 
-## 标题一
+大学在成都，毕业后去济南，现在在北京。前段时间从回龙观搬到了奥运村，周末会去旁边的奥森跑步
 
-### 小标题
+## 效率
 
-## 标题二
+我是一个喜欢折腾的人，折腾了许多工具，有句古话‘差生文具多’，但从我的层面，我折腾往往只是为了提升效率，有时候或许只是一点点的提升，应用到大量场景的时候，累计起来，收益还是很可观的
 
-### 小标题
+### 博客
 
-## 标题三
+> 我的博客几经变更，虽然有些内容丢失了，但还是保存下来了一些。
+> 最初我把所有内容都放在博客，但我实践了一段时间后，意识到一些零碎的记录其实不适合放在博客，博客应该是类似 newsletter 的形式，要有好的阅读体验，然而我没啥时间整理格式（懒），所以博客内容总共加起来也没有很多。反倒是之前在济南，Leader 要求做技术分享的日子，积累了一些排版还过得去的博客，然而丢失的内容就是这些...
 
-### 小标题
+而且，我发现自己以前写的一些技术文章，现在去看能发现明显的错误。所以我觉得，在输出之前，还是要好好内化一下知识。我还是需要更多的输入和处理，避免输出误人的内容。
 
-# 后记
+综上，博客就是随缘更新的。
+
+### 工具
+
+> 工具是第一生产力，通过使用工具能够快速做到某一领域的最佳实践
+
+这里推荐几个我认为很有意义的工具把：
+
+#### **Wakatime**
+
+用在 code editor 里装插件的形式使用。可以统计你的 code activity，官网的看板很不错。可视化自己的 coding 动态，来分析自己的工作状态，对应做出调整。
+
+关于这一点可以参考现代运动员，在训练甚至比赛的时候都会佩戴各种监测设备，有专业团队分析数据。这是一个好的方式，毕竟数据是最可靠的，
+
+#### **Logseq**
+
+今年最大的惊喜。简单介绍下，就是个开源的双链笔记，我给它贡献过几次代码。
+
+关于 Logseq，已经有很多优秀的英文文章和视频的介绍。但是中文的内容还比较少，我后续会写一篇博客介绍下它。
+
+#### **加湿器**
+
+以前一直觉得这是个智商检测电器，来了北京后，鼻子每时每刻都是阻的，太难受了，我明明没有鼻炎的，感觉再待个把月就得去医院看鼻子了...然后听朋友的，买了加湿器。en...天亮了
+
+### 信息
+
+现在是信息大爆炸的时代，无时无刻不在产生信息。信息的摄入方式多种多样，渐渐地，有人提出‘工作流’的观点，分享自己的信息处理流程。我也形成了一套自己的方法论，当然只适合当下我的需求，他随时会变，但是数据是不变的，这也是我为啥用 Logseq 的原因
+
+## 运动
+
+### 足球
+
+足球是本命，然而踢球太麻烦了，还容易受伤，已经大半年没踢了...
+
+### 乒乓球
+
+目前就偶尔和女朋友周末打打乒乓球
