fix(category): sidebar bug and add new post

--- a/posts/突然日记一.md
+++ b/posts/突然日记一.md
@@ -12,12 +12,7 @@ tags:
 
 ### 发现
 
-今天发现自己实现的 Page 目录插件有坑，如果不满足规则就会点击没反应
-规则：
+~~今天发现自己实现的 Page 目录插件有坑，如果不满足规则就会点击没反应
+规则：必须全小写,空格用’-'代替,‘\_’ '()'需要去掉,不能有表情符号,转义一下应该就行了，回头有时间我去 Github 翻翻，看看大佬们是怎么实现的~~
 
-- 必须全小写
-- 空格用’-'代替
-- ‘\_’ '()'需要去掉
-- 不能有表情符号
-
-转义一下应该就行了，回头有时间我去 Github 翻翻，看看大佬们是怎么实现的
+扒了扒 vuepress-plugin-sidebar 的代码，看起来是我的参数用错了，v2 版本应该用 slug，对应我这里也是 slug
