--- a/posts/虚拟机配置.md
+++ b/posts/虚拟机配置.md
@@ -6,7 +6,7 @@ tags:
   - 环境配置
 ---
 
-### linux 命令行
+### linux shell
 
 - mv [OPTIONS] source destination 将一个文件或目录重命名或移动到另一个位置
 - pwd 打印当前位置
@@ -29,7 +29,7 @@ tags:
   - 只修改某个非 root 用户的环境变量：/home/非 root 用户名/.bashrc 文件
   - 理论上的最佳实践是，开启 wsl2，新建一个 root 组的用户 clark,然后所有配置都在 clark 用户操作，因为 electron build 如果是 root 用户会有问题（需要加 --no-sandbox，如果是依赖的话就加不了这一行）
 
-### VMware 安装
+### 安装 VMware
 
 - 先在 423down 搜索 VMware Workstation PRO(阿里云盘里有 16 版本)
 - 安装，安装时注意勾选 WHP，为了兼容 windows 的 Linux 子系统的虚拟机 Hyper-v
@@ -48,3 +48,20 @@ tags:
 - 然后配置本机走 cfw 的代理即可（里面的 firefox 浏览器默认是走的本机的配置，所以只需要配置本机代理接口，设置-network-proxy，manual-设置 127.0.0.1:8080,把 cfw 的端口改成 8080,并设置为开机启动）
 - 代理这里会有一点问题，就是虚拟机里面开不了 tun mode，只能手动配置代理，其实不太方便，虚拟机的网络走的是 NAT 模式，网络上有把其改为桥接模式，然后外围的 windows 的 clash 开启 lan，里面连接外围代理的设置，但我觉得没有我的这种好
 - 目前遗留了一个 bug，就是 VMtools 的跨系统自动鼠标指针和跨系统的复制粘贴不能用，不清楚是什么原因，查了下，应该是 VMtools 的部分功能没起作用，在配置了试了下，没啥用。目前是可用状态，就不折腾了
+
+### 安装manjaro-kde
+
+- [官网下载对应 iso](https://manjaro.org/downloads/official/kde/)，下载后文件放入对应位置
+- 安装过程一致，选择经典，但是自己把内存调大点，注意，语言一定要选择英文，不然最后文件夹名会是中文（如果不小心弄了中文，除了重装，还有曲线救国的方法[链接](https://segmentfault.com/a/1190000037454534)），在命令行里就是很长的一串字符，特别麻烦，选完后，编辑配置，高级，设置共享文件夹和禁用侧通道，然后开启虚拟机，安装系统
+- [我使用的分区信息都在这里，参考链接](https://www.liangzl.com/get-article-detail-206412.html)
+- [参考链接二，我的炫龙里的镜像没有使用这个，但是可以参考](https://blog.csdn.net/cxy1430826258/article/details/105050867)
+- 安装太慢了...对比 mint 配置也很繁琐...但是界面真的很新颖，跟 mint 上个世纪的页面比，好看很多
+- 如果分辨率有问题，重启下虚拟机就好了
+- 然后就是配置软件源，设置代理软件（安装 cfw），安装常用软件
+- 配置下中文输入法，alt+space 唤起搜索，输入 input，进入 config，选择 Pinyin, shortcut 里有写 ctrl+space 切换输入法
+- 在 linux-mint 中，无法复制粘贴和无法拖动文件的 bug 在这里却没有复现，但是共享文件夹却没有挂载到/mnt/目录，也不知道为啥...[参考这里的链接应该能解决](https://zhuanlan.zhihu.com/p/344845390)，我就不折腾了，都能复制粘贴了，我还要共享文件夹干嘛...
+- 最后遗留一个坑，~~cfw 是装上了，但是系统代理配置了没起作用，没时间折腾了，下次有机会再看吧，做饭了~~ 系统代理设置了，火狐浏览器设置自动跟随系统无效，设置手动 127.0.0.1:8080 后成功
+
+### 总结
+
+- 不同的镜像竟然有不同的坑,linux 桌面端果然是个大坑...坚定了我继续用 windows+wsl2 的道路...或者直接用 mac 也行，啥都帮我弄好了，相信 less is more
