fix: language typo

--- a/posts/智能合约开发.md
+++ b/posts/智能合约开发.md
@@ -58,7 +58,7 @@ GAS 是一个工作量单位，复杂度越大，所需 gas 越多。费用=gas 
 
 在contracts里添加Counter.sol
 
-```sol
+```solidity
 // SPDX-License-Identifier:  MIT
 pragma solidity ^0.8.0;
 
@@ -150,7 +150,7 @@ truffle工程包含
 
 #### 合约编译
 
-```shel
+```shell
 //使用命令
 truffle compile
 ```
