--- a/posts/前端已死.md
+++ b/posts/前端已死.md
@@ -82,18 +82,23 @@ twitter 上有些独立开发者，但我觉得这种相当于自己创业了。
 
 而且国外虽然没有 35 危机，但是裁员危机却是避不开的，并没有万全的法子。润只能减缓，治标不治本。
 
-### 不想润
+### 润？
 
-我是不想润的，不想在国外孤独地写代码，想和父母亲人一起度过余生。
+润不润还是看个人选择吧，我觉得润出去只是去发达国家当普通人而已，因为本身是发达国家，所以生活质量、社会福利等等都有保证。
 
-留在国内的话，就要做好 35 岁以后会动荡不安的心里准备。
+我个人还是倾向于跟着工作走，如果工作需要润的话，我还是乐意去国外赚钱的。至于移民的话，目前没啥想法。
 
-以后可能必须大幅降薪，可能只接的到外包，可能必须转行，可能去卖课，去做生意，也可能去开滴滴、送外卖...
+而如果不润的话，就难以避免上面说到的35岁危机。所以该润就润。
 
-所以我觉得不想润的话，就必须抓紧时间，尽量往上爬。
 
-花更多的时间学习，让自己保持靠前的竞争力。尽量在自己失业之前，赚够足够多的钱。
+### 现在
+
+学好英语，为润做好准备。
+
+要卷，僧多粥少的情况下，唯有卷赢别人，自己才有饭吃。
+
+尽量在自己失业之前，赚够足够多的钱。
 
 多探索创业的可能性，既然打工早晚要失业，那么不如自己去当老板。
 
-或者换一种思路，提前进入铁饭碗行业，旱涝保收。毕竟，铁饭碗才是这片土地的主流。
+想留在国内的话，还是要提前进入铁饭碗行业，旱涝保收。毕竟，铁饭碗才是这片土地的主流。
